Updating docs with latest version of main from the FDL gitlab repo

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -36,6 +36,8 @@ html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+	mkdir ./build/html/_static/_static
+	mv -v ./build/html/_static/helio_badge.png ./build/html/_static/_static/
 
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
